[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
  "pytest>=6.2.3",
  "pytest-cov>=2.11.1",
  "black>=21.10b0",
  "mypy>=0.812",
  "pylint>=2.7.4",
  "pyfakefs>=4.4.0",
  "salt<3006,>=3005",
  "pytest-testinfra<7.0.0,>=6.7.0",
  "types-PyYAML<7,>=6",
]

[tool.pdm.build]
includes = ["salt_lsp/data/states.pickle", "salt_lsp/*.py"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vv --cov=salt_lsp --cov-report term --cov-report html --cov-report xml --cov-branch"
xfail_strict = true

[tool.black]
line-length = 79

[project]
name = "salt-lsp"
version = "0.0.1"
description = "Salt Language Server Protocol Server"
authors = [
  { name = "Dan Čermák", email = "dcermak@suse.com" },
  { name = "Cédric Bosdonnat", email = "cbosdonnat@suse.com" },
]
dependencies = ["pygls<1.0.0,>=0.11.3", "pydantic<2", "PyYAML<7,>=6"]
requires-python = "<3.12,>=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }

[project.scripts]
salt_lsp_server = "salt_lsp.__main__:main"
dump_state_name_completions = "salt_lsp.cmds:dump_state_name_completions"
